--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,7 +26,7 @@
 }
 
 .theme-dark .markdown-body {
-    color: #24292e;
+  color: #24292e;
 }
 
 .theme-dark .search-highlighted {
@@ -38,28 +38,28 @@
 }
 
 .theme-dark {
-  --bg-background-primary: #0D2438;
-  --bg-background-secondary: #102C44;
-  --bg-background-tertiary: #1E3951;
+  --bg-background-primary: #0d2438;
+  --bg-background-secondary: #102c44;
+  --bg-background-tertiary: #1e3951;
 
   --bg-background-form: #1a202c;
 
   --text-copy-primary: #cbd5e0;
   --text-copy-secondary: #e2e8f0;
 
-  --border-border-color-primary:  #1a202c;
+  --border-border-color-primary: #1a202c;
 }
 
 .theme-dark .markdown-body {
-    color: #cbd5e0;
+  color: #cbd5e0;
 }
 
 .theme-dark nav .active {
-    @apply border-white border-b;
+  @apply border-white border-b;
 }
 
 .content-wrapper {
-  transition: background-color .25s;
+  transition: background-color 0.25s;
 }
 
 a {
@@ -83,18 +83,21 @@ nav .active {
 @media (min-width: 640px) {
   .container-inner {
     max-width: 640px;
+    /* max-width: 60%; */
   }
 }
 
 @media (min-width: 768px) {
   .container-inner {
     max-width: 768px;
+    /* max-width: 60%; */
   }
 }
 
 @media (min-width: 1024px) {
   .container-inner {
-    max-width: 800px;
+    /* max-width: 800px; */
+    max-width: 60%;
   }
 }
 
